apiをとってくる動作の確認ができた
